--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+* {
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background:whitesmoke;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display:flex;
+  justify-content: space-between;
+  background:rgba(22, 190, 120, 0.651);
+  color:white;
+  padding:8px;
+}
+.title {
+  padding:10px;
+  font-weight:bold;
+  font-size:20px;
+}
+.addBtn {
+  background:rgb(71, 131, 243);
+  padding:5px;
+  align-self:center;
+  cursor:pointer;
+  transition:0.4s;
+  border:none;
+  border-radius:4px;
+}
+footer {
+  position:fixed;
+  bottom:0;
+  text-align: center;
+  width:100%;
+  padding:10px;
+}
+.lists {
+  display:flex;
+  flex-wrap:wrap;
+}
+.list-card {
+  margin:5px;
+  border:1px solid rgb(206, 196, 196);
+  border-radius:4px;
+  box-shadow:0px 0px 10px rgb(187, 179, 179);
+  padding:5px;
+  width:auto;
+  height:100px;
+}
+.list-form {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.add-list {
+  margin:10px;
+  padding:10px;
+  height:auto;
+  border:1px solid rgb(196, 172, 172);
+  border-radius:4px;
+  align-items:center;
+  width:400px;
+}
+.list-input {
+  margin:4px;
+}
+.list-input input {
+  width:100%;
+  padding:5px;
+  border-radius:4px;
+  border:1px solid rgb(214, 200, 200);
+  outline:none;
+}
+.list-input input:focus {
+  box-shadow: 0px 0px 3px rgb(164, 164, 196);
+}
+.listBtn {
+  display:flex;
+  justify-content: center;
+}
+.listBtn button {
+  width:100%;
+  padding:5px;
+  border:none;
+  border-radius:4px;
+  background:rgb(27, 192, 27);
+  color:white;
+  cursor:pointer;
+  transition:0.4s;
+}
+.nothing { 
+  position:absolute;
+  top:45%;
+}
+@media only screen and (max-width:396px) {
+ .list-card {
+   width:100%;
+ }
+ .nothing {
+   position:absolute;
+   top:45%;
+ }
 }
